--- a/ejercicio1-html-y-css/index.html
+++ b/ejercicio1-html-y-css/index.html
@@ -8,6 +8,18 @@
     <title>Mi Receta</title>
 </head>
 <body>
-    
+    <h1>Receta: Ensalada</h1>
+    <img src="https://s3.amazonaws.com/makeitreal/salad.png" alt="Ensalada">
+    <h2>Ingredientes</h2>
+    <p>Los ingredientes necesarios para preparar la ensalada son los siguientes:</p>
+    <u>
+        <li>Pechuga</li>
+        <li>Lechuga</li>
+        <li>Tomate</li>
+        <li>Cebolla</li>
+        <li>Maiz</li>
+    </u>
+    <h3>Preparación</h3>
+    <p>Se pican todos los ingredientes, se mezclan y listo!</p>
 </body>
 </html>
