--- a/ejercicio1-html-y-css/index.html
+++ b/ejercicio1-html-y-css/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="css/estilos.css">
     <title>Mi Receta</title>
 </head>
 <body>
-    <h1>Receta: Ensalada</h1>
+    <h1 class = "title">Receta: Ensalada</h1>
     <img src="https://s3.amazonaws.com/makeitreal/salad.png" alt="Ensalada">
     <h2>Ingredientes</h2>
     <p>Los ingredientes necesarios para preparar la ensalada son los siguientes:</p>
