--- a/ejercicio1-html-y-css/index.html
+++ b/ejercicio1-html-y-css/index.html
@@ -8,7 +8,7 @@
     <title>Mi Receta</title>
 </head>
 <body>
-    <h1 class = "title">Receta: Ensalada</h1>
+    <h1>Receta: Ensalada</h1>
     <img src="https://s3.amazonaws.com/makeitreal/salad.png" alt="Ensalada">
     <h2>Ingredientes</h2>
     <p>Los ingredientes necesarios para preparar la ensalada son los siguientes:</p>
@@ -21,5 +21,14 @@
     </u>
     <h3>Preparación</h3>
     <p>Se pican todos los ingredientes, se mezclan y listo!</p>
+    <h4>Paso a Paso</h4>
+    <ol>
+        <li>Se lavan los alimentos</li>
+        <li>Se pica el tomate, la lechuga y la cebolla</li>
+        <li>Trozamos el pollo</li>
+        <li>Mezclamos en un bold todos los ingredientes</li>
+    </ol>
+
+
 </body>
 </html>
