--- a/ejercicio1-html-y-css/index.html
+++ b/ejercicio1-html-y-css/index.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/estilos.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/estilos.css" />
     <title>Mi Receta</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Receta: Ensalada</h1>
-    <img src="https://s3.amazonaws.com/makeitreal/salad.png" alt="Ensalada">
+    <img src="https://s3.amazonaws.com/makeitreal/salad.png" alt="Ensalada" />
     <h2>Ingredientes</h2>
-    <p>Los ingredientes necesarios para preparar la ensalada son los siguientes:</p>
+    <p>
+      Los ingredientes necesarios para preparar la ensalada son los siguientes:
+    </p>
     <u>
-        <li>Pechuga</li>
-        <li>Lechuga</li>
-        <li>Tomate</li>
-        <li>Cebolla</li>
-        <li>Maiz</li>
+      <li>Pechuga</li>
+      <li>Lechuga</li>
+      <li>Tomate</li>
+      <li>Cebolla</li>
+      <li>Maiz</li>
     </u>
     <h3>Preparación</h3>
     <p>Se pican todos los ingredientes, se mezclan y listo!</p>
     <h4>Paso a Paso</h4>
     <ol>
-        <li>Se lavan los alimentos</li>
-        <li>Se pica el tomate, la lechuga y la cebolla</li>
-        <li>Trozamos el pollo</li>
-        <li>Mezclamos en un bold todos los ingredientes</li>
+      <li>Se lavan los alimentos</li>
+      <li>Se pica el tomate, la lechuga y la cebolla</li>
+      <li>Trozamos el pollo</li>
+      <li>Mezclamos en un bold todos los ingredientes</li>
     </ol>
-
-
-</body>
+  </body>
 </html>
