--- a/ejercicio1-html-y-css/index.html
+++ b/ejercicio1-html-y-css/index.html
@@ -10,25 +10,35 @@
   <body>
     <h1>Receta: Ensalada</h1>
     <img src="https://s3.amazonaws.com/makeitreal/salad.png" alt="Ensalada" />
-    <h2>Ingredientes</h2>
-    <p>
-      Los ingredientes necesarios para preparar la ensalada son los siguientes:
-    </p>
-    <u>
-      <li>Pechuga</li>
-      <li>Lechuga</li>
-      <li>Tomate</li>
-      <li>Cebolla</li>
-      <li>Maiz</li>
-    </u>
-    <h3>Preparación</h3>
-    <p>Se pican todos los ingredientes, se mezclan y listo!</p>
-    <h4>Paso a Paso</h4>
-    <ol>
-      <li>Se lavan los alimentos</li>
-      <li>Se pica el tomate, la lechuga y la cebolla</li>
-      <li>Trozamos el pollo</li>
-      <li>Mezclamos en un bold todos los ingredientes</li>
-    </ol>
+    <div>
+      <h2>Ingredientes</h2>
+      <p>
+        Los ingredientes necesarios para preparar la ensalada son los
+        siguientes:
+      </p>
+      <u>
+        <li>Pechuga</li>
+        <br />
+        <li>Lechuga</li>
+        <br />
+        <li>Tomate</li>
+        <br />
+        <li>Cebolla</li>
+        <br />
+        <li>Maiz</li>
+      </u>
+      <h3>Preparación</h3>
+      <h4>Paso a Paso</h4>
+      <ol>
+        <li>Se lavan los alimentos</li>
+        <br />
+        <li>Se pica el tomate, la lechuga y la cebolla</li>
+        <br />
+        <li>Trozamos el pollo</li>
+        <br />
+        <li>Mezclamos en un bold todos los ingredientes</li>
+      </ol>
+      <p>Se pican todos los ingredientes, se mezclan y listo!</p>
+    </div>
   </body>
 </html>
