Implementa el formulario del ejercicio de html

--- a/ejercicio2/index.html
+++ b/ejercicio2/index.html
@@ -1,14 +1,37 @@
 <!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Login</title>
-</head>
-<body>
-
-    
-</body>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  </head>
+  <body>
+    <form class="form">
+      <div class="font">
+        <h1>Login</h1>
+        <br />
+        <label for="Email">Email</label>
+        <input type="Email" name="Email" id="Email" />
+        <br />
+        <br />
+        <label for="Password">Password</label>
+        <input type="Password" name="Password" id="Password" />
+        <br />
+        <br />
+        <label for="Género">Género</label>
+        <select name="Género" id="Género">
+          <option value="masculino">Masculino</option>
+          <option value="femenino">Femenino</option>
+        </select>
+        <br />
+        <br />
+        <input type="checkbox" id="terms" name="terms" />
+        <label for="terms">Acepto los términos</label>
+        <br />
+        <br />
+      </div>
+      <input type="submit" value="Ingresar" id="button" />
+    </form>
+  </body>
 </html>
